# photo_editors

./: CMakeLists.txt  README.md
bin.dbg/: imgui.ini
photo_editors/: CMakeLists.txt  flags.cpp  image.h  photo_editors.cpp  photo_editors.h
photo_editors/dialog/: CMakeLists.txt  CODE_OF_CONDUCT.md  CustomFont.cpp  CustomFont.h  CustomFont.ifs  CustomImGuiFileDialogConfig.h  README.md  main.cpp
photo_editors/dialog/ImGuiFileDialog/: CMakeLists.txt  ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h
photo_editors/dialog/ImGuiFileDialog/dirent/: ChangeLog
photo_editors/dialog/cmake/: 3rdparty.cmake  glad.cmake  glfw.cmake  imgui.cmake
photo_editors/dialog/tests/: CMakeLists.txt  main.cpp
photo_editors/dialog/tests/ImGuiFileDialog/: Test_ImGuiFileDialog.cpp  Test_ImGuiFileDialog.h
photo_editors/dialog/tests/ImGuiFileDialog/FilterManager/: Test_FilterManager.cpp  Test_FilterManager.h
